tests/baselines/reference/thisExpressionInIndexExpression(strict=true).errors.txt
thisExpressionInIndexExpression.ts(2,12): error TS7006: Parameter 'r' implicitly has an 'any' type.
thisExpressionInIndexExpression.ts(2,19): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== thisExpressionInIndexExpression.ts (2 errors) ====
    function f() {
        return r => r[this];
               ~
!!! error TS7006: Parameter 'r' implicitly has an 'any' type.
                      ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }